# ring/fastapp/_gen/all_sqla_models.py
@@ -15,6 +15,7 @@ def import_all_sqla_models() -> None:
         Response,
     )
     from ring.notebook.models.document import Document, DocumentEdit
+    from ring.notifications.models.inbox_item import InboxItem
     from ring.notifications.models.subscription import Subscription
     from ring.parties.models.group_key_value import GroupKeyValue
     from ring.parties.models.group_model import Group
